# LiveStreamingPipeline

./: CMakeLists.txt  README.md  index.html
include/: gstreamer_pipeline.hpp  webrtc_server.hpp
src/: gstreamer_pipeline.cpp  main.cpp  webrtc_server.cpp
